# dbn-pipe

./: .gitignore  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  NOTICE  README.md
.github/workflows/: ci.yml
docs/: api-guide.md  getting-started.md  libuv-integration.md
docs/plans/: 2025-01-28-event-loop-design.md  2025-01-28-implementation-plan.md  2025-12-28-historical-client-design.md  2025-12-28-historical-client-impl.md  2025-12-28-live-client-refactor.md  2025-12-29-unified-pipeline-design.md  2025-12-29-unified-pipeline-implementation.md  2025-12-30-tcpsocket-zero-copy-design.md  2025-12-30-zero-copy-record-batch.md  2026-01-01-stream-library-design.md  2026-01-01-stream-library-impl.md  2026-01-19-api-feature-parity-design.md  2026-01-19-api-feature-parity-impl.md  2026-01-20-api-clients.md  2026-01-22-unified-pipeline-design.md  2026-01-22-unified-pipeline-impl.md  2026-01-23-dbwriter.md  2026-01-24-merge-reactor.md  2026-01-24-rest-api-pipeline-design.md  2026-01-24-rest-api-pipeline-impl.md
example/dbwriter/: BUILD.bazel  DESIGN.md
example/dbwriter/include/dbwriter/: asio_event_loop.hpp  batch_writer.hpp  database.hpp  fixed_string.hpp  libpq_wrapper.hpp  mapper.hpp  pg_types.hpp  postgres.hpp  schema_validator.hpp  table.hpp  transform.hpp  types.hpp
example/dbwriter/src/: postgres.cpp  types.cpp
example/dbwriter/test/: asio_event_loop_test.cpp  batch_writer_test.cpp  e2e_test.cpp  fixed_string_test.cpp  integration_test.cpp  mapper_test.cpp  mock_database.hpp  mock_libpq.hpp  multithread_test.cpp  pg_types_test.cpp  postgres_async_test.cpp  postgres_test.cpp  schema_validator_test.cpp  table_test.cpp  transform_test.cpp  types_test.cpp
example/rest_api/: BUILD.bazel  README.md
example/rest_api/include/rest_api/: rest_api_pipeline.hpp
example/rest_api/test/: rest_api_pipeline_test.cpp
lib/stream/: BUILD.bazel  buffer_chain.hpp  component.hpp  epoll_event_loop.cpp  epoll_event_loop.hpp  error.hpp  event.hpp  event_loop.cpp  event_loop.hpp  http_client.hpp  http_request_builder.hpp  json_parser.hpp  pipeline.hpp  pipeline_fwd.hpp  protocol.hpp  reactor.cpp  reactor.hpp  segment_allocator.hpp  sink.hpp  suspendable.hpp  tcp_socket.hpp  timer.hpp  tls_transport.hpp  url_encode.hpp  zstd_decompressor.hpp
src/: BUILD.bazel  api.hpp  api_client.hpp  api_protocol.hpp  buffer_chain.hpp  client.hpp  cram_auth.cpp  cram_auth.hpp  cram_auth_utils.cpp  cram_auth_utils.hpp  data_source.hpp  dbn_parser_component.hpp  dns_resolver.hpp  duckdb_storage.hpp  epoll_event_loop.cpp  epoll_event_loop.hpp  error.hpp  event_loop.cpp  event_loop.hpp  historical_client.cpp  historical_client.hpp  historical_protocol.hpp  http_client.cpp  http_client.hpp  instrument_map.hpp  live_client.cpp  live_client.hpp  live_protocol.hpp  live_protocol_handler.hpp  parser.hpp  pipeline.hpp  pipeline_base.hpp  pipeline_component.hpp  pipeline_sink.hpp  protocol_driver.hpp  reactor.cpp  reactor.hpp  record_batch.hpp  retry_policy.hpp  schema_utils.hpp  (+18 more)
src/api/: BUILD.bazel  api_pipeline.hpp  json_parser.hpp  metadata_client.hpp  symbology_client.hpp  url_encode.hpp
src/pg/: BUILD.bazel  byte_buffer.cpp  byte_buffer.hpp  mapper.hpp  pg_types.hpp
src/table/: BUILD.bazel  column_type.hpp  definitions.hpp  fixed_string.hpp  mbp1.hpp  ohlcv.hpp  statistics.hpp  status.hpp  table.hpp  trades.hpp
src/table/test/: BUILD.bazel  column_type_test.cpp
tests/: BUILD.bazel  api_client_test.cpp  api_error_test.cpp  api_pipeline_test.cpp  api_protocol_concept_test.cpp  api_request_test.cpp  buffer_chain_test.cpp  client_test.cpp  column_type_test.cpp  cram_auth_test.cpp  cram_auth_utils_test.cpp  data_source_test.cpp  dbn_parser_component_test.cpp  definitions_test.cpp  duckdb_storage_factory_test.cpp  duckdb_storage_test.cpp  epoll_event_loop_test.cpp  error_test.cpp  event_test.cpp  fixed_string_test.cpp  generic_pipeline_test.cpp  historical_client_test.cpp  historical_protocol_test.cpp  http_client_test.cpp  http_request_builder_test.cpp  instrument_map_test.cpp  json_parser_test.cpp  live_client_test.cpp  live_protocol_handler_test.cpp  live_protocol_test.cpp  mbp1_test.cpp  metadata_client_test.cpp  ohlcv_test.cpp  parser_test.cpp  pipeline_base_test.cpp  pipeline_component_test.cpp  pipeline_integration_test.cpp  pipeline_sink_test.cpp  pipeline_test.cpp  protocol_concept_test.cpp  (+25 more)
tests/pg/: BUILD.bazel  byte_buffer_test.cpp  mapper_test.cpp  pg_types_test.cpp
toolchain/: cc_toolchain_config.bzl
