"""Bazel module configuration for dbn-pipe."""

module(
    name = "dbn-pipe",
    version = "0.6.1",
)

# ============================================================================
# Core Build Rules
# ============================================================================

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# ============================================================================
# Testing
# ============================================================================

bazel_dep(name = "googletest", version = "1.15.2")

# ============================================================================
# Dependencies
# ============================================================================

# TLS/Crypto (for CRAM auth SHA256, Historical TLS)
# Note: Using system OpenSSL instead of BCR version due to glibc compatibility issues
# bazel_dep(name = "openssl", version = "3.3.1.bcr.9")

# Decompression (for Historical API)
bazel_dep(name = "zstd", version = "1.5.6")

# ============================================================================
# Databento C++ headers (type definitions only)
# ============================================================================

databento = use_extension("//third_party/databento:databento.bzl", "databento")
use_repo(databento, "databento_cpp")

# System OpenSSL wrapper
openssl_sys = use_extension("//third_party/openssl:openssl.bzl", "openssl_sys_ext")
use_repo(openssl_sys, "openssl_sys")

# llhttp HTTP parser
llhttp_ext = use_extension("//third_party/llhttp:llhttp.bzl", "llhttp_ext")
use_repo(llhttp_ext, "llhttp")

# DuckDB embedded database (for InstrumentMap cache)
duckdb_ext = use_extension("//third_party/duckdb:duckdb.bzl", "duckdb")
use_repo(duckdb_ext, "duckdb")

# ============================================================================
# C++ Toolchain
# ============================================================================

register_toolchains("//toolchain:cc_toolchain_for_k8")
