"""Bazel module configuration for dbn-pipe."""

module(
    name = "dbn-pipe",
    version = "0.8.0",
)

# ============================================================================
# Core Build Rules
# ============================================================================

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# Configure Python toolchain to allow running as root in CI containers
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    ignore_root_user_error = True,
)

# ============================================================================
# Testing
# ============================================================================

bazel_dep(name = "googletest", version = "1.15.2")

# ============================================================================
# Dependencies
# ============================================================================

# TLS/Crypto (for CRAM auth SHA256, Historical TLS)
# Note: Using system OpenSSL instead of BCR version due to glibc compatibility issues
# bazel_dep(name = "openssl", version = "3.3.1.bcr.9")

# Decompression (for Historical API)
bazel_dep(name = "zstd", version = "1.5.6")

# String formatting
bazel_dep(name = "fmt", version = "11.0.2")

# ============================================================================
# Databento C++ headers (type definitions only)
# ============================================================================

databento = use_extension("//third_party/databento:databento.bzl", "databento")
use_repo(databento, "databento_cpp")

# System OpenSSL wrapper
openssl_sys = use_extension("//third_party/openssl:openssl.bzl", "openssl_sys_ext")
use_repo(openssl_sys, "openssl_sys")

# llhttp HTTP parser
llhttp_ext = use_extension("//third_party/llhttp:llhttp.bzl", "llhttp_ext")
use_repo(llhttp_ext, "llhttp")

# DuckDB embedded database (for InstrumentMap cache)
duckdb_ext = use_extension("//third_party/duckdb:duckdb.bzl", "duckdb")
use_repo(duckdb_ext, "duckdb")

# RapidJSON header-only JSON parser
rapidjson_ext = use_extension("//third_party/rapidjson:rapidjson.bzl", "rapidjson_ext")
use_repo(rapidjson_ext, "rapidjson")

# ASIO (header-only networking)
asio_ext = use_extension("//third_party/asio:asio.bzl", "asio_ext")
use_repo(asio_ext, "asio")

# libpq (PostgreSQL client)
libpq_ext = use_extension("//third_party/libpq:libpq.bzl", "libpq_ext")
use_repo(libpq_ext, "libpq")

# ============================================================================
# C++ Toolchain
# ============================================================================

register_toolchains("//toolchain:cc_toolchain_for_k8")
