load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "trading_date",
    hdrs = ["trading_date.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "storage",
    hdrs = ["storage.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":trading_date",
    ],
)

cc_library(
    name = "instrument_map",
    hdrs = ["instrument_map.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":storage",
        ":trading_date",
        "@databento_cpp//:databento_headers",
    ],
)

cc_library(
    name = "dbn_parser_component",
    hdrs = ["dbn_parser_component.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:error",
        ":record_batch",
        # Full library needed: uses RecordHeader::Size()
        "@databento_cpp//:databento_with_impl",
    ],
)

cc_library(
    name = "cram_auth",
    hdrs = ["cram_auth.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:error",
        "//lib/stream:event_loop",
        "//lib/stream:tls_transport",
        "@openssl_sys//:crypto",
    ],
)

cc_library(
    name = "symbol_map",
    hdrs = ["symbol_map.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "@databento_cpp//:databento_headers",
    ],
)

cc_library(
    name = "dns_resolver",
    hdrs = ["dns_resolver.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "record_batch",
    hdrs = ["record_batch.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "@databento_cpp//:databento_headers",
    ],
)

cc_library(
    name = "pipeline_sink",
    hdrs = ["pipeline_sink.hpp"],
    deps = [
        "//lib/stream:error",
        "//lib/stream:event_loop",
        ":record_batch",
    ],
    visibility = ["//visibility:public"],
)


cc_library(
    name = "protocol_driver",
    hdrs = ["protocol_driver.hpp"],
    deps = [
        "//lib/stream:event_loop",
        ":pipeline_sink",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "live_protocol",
    hdrs = ["live_protocol.hpp"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:event_loop",
        "//lib/stream:sink",
        "//lib/stream:tcp_socket",
        ":cram_auth",
        ":dbn_parser_component",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "historical_protocol",
    hdrs = ["historical_protocol.hpp"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:event_loop",
        "//lib/stream:http_client",
        "//lib/stream:sink",
        "//lib/stream:tcp_socket",
        "//lib/stream:tls_transport",
        "//lib/stream:url_encode",
        "//lib/stream:zstd_decompressor",
        ":dbn_parser_component",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "pipeline",
    hdrs = ["pipeline.hpp"],
    deps = [
        "//lib/stream:component",
        "//lib/stream:error",
        "//lib/stream:event_loop",
        ":dns_resolver",
        ":pipeline_sink",
        ":protocol_driver",
        "@databento_cpp//:databento_headers",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "client",
    hdrs = ["client.hpp"],
    deps = [
        "//lib/stream:event_loop",
        ":pipeline",
        ":live_protocol",
        ":historical_protocol",
        "@databento_cpp//:databento_headers",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "stream",
    hdrs = ["stream.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:error",
        "//lib/stream:event_loop",
        "//lib/stream:reactor",
        "//lib/stream:tcp_socket",
    ],
)

cc_library(
    name = "retry_policy",
    hdrs = ["retry_policy.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:error",
    ],
)

cc_library(
    name = "schema_utils",
    hdrs = ["schema_utils.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "@databento_cpp//:databento_headers",
    ],
)

cc_library(
    name = "stype",
    hdrs = ["stype.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "duckdb_storage",
    hdrs = ["duckdb_storage.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":storage",
        ":trading_date",
        "@duckdb",
    ],
)

cc_library(
    name = "api_protocol",
    hdrs = ["api_protocol.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:event_loop",
        "//lib/stream:http_client",
        "//lib/stream:json_parser",
        "//lib/stream:sink",
        "//lib/stream:tcp_socket",
        "//lib/stream:tls_transport",
        "//lib/stream:url_encode",
    ],
)
