load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "trading_date",
    hdrs = ["trading_date.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "storage",
    hdrs = ["storage.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":trading_date",
    ],
)

cc_library(
    name = "instrument_map",
    hdrs = ["instrument_map.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":storage",
        ":trading_date",
        "@databento_cpp//:databento_headers",
    ],
)

cc_library(
    name = "dbn_parser_component",
    hdrs = ["dbn_parser_component.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:error",
        ":record_batch",
        # Full library needed: uses RecordHeader::Size()
        "@databento_cpp//:databento_with_impl",
    ],
)

cc_library(
    name = "cram_auth",
    hdrs = ["cram_auth.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:error",
        "//lib/stream:event_loop",
        "//lib/stream:tls_transport",
        "@openssl_sys//:crypto",
    ],
)

cc_library(
    name = "symbol_map",
    hdrs = ["symbol_map.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "@databento_cpp//:databento_headers",
    ],
)

cc_library(
    name = "dns_resolver",
    hdrs = ["dns_resolver.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "record_batch",
    hdrs = ["record_batch.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "@databento_cpp//:databento_headers",
    ],
)


cc_library(
    name = "live_protocol",
    hdrs = ["live_protocol.hpp"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:event_loop",
        "//lib/stream:sink",
        "//lib/stream:tcp_socket",
        ":cram_auth",
        ":dbn_parser_component",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "historical_protocol",
    hdrs = ["historical_protocol.hpp"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:event_loop",
        "//lib/stream:http_client",
        "//lib/stream:http_request_builder",
        "//lib/stream:sink",
        "//lib/stream:tcp_socket",
        "//lib/stream:tls_transport",
        "//lib/stream:zstd_decompressor",
        ":dbn_parser_component",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "streaming_client",
    hdrs = ["streaming_client.hpp"],
    deps = [
        "//lib/stream:error",
        "//lib/stream:event_loop",
        "//lib/stream:pipeline",
        "//lib/stream:protocol",
        "//lib/stream:sink",
        "//lib/stream:suspendable",
        ":dns_resolver",
        ":record_batch",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "client",
    hdrs = ["client.hpp"],
    deps = [
        ":streaming_client",
        ":live_protocol",
        ":historical_protocol",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "retry_policy",
    hdrs = ["retry_policy.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:error",
    ],
)

cc_library(
    name = "schema_utils",
    hdrs = ["schema_utils.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "@databento_cpp//:databento_headers",
    ],
)

cc_library(
    name = "stype",
    hdrs = ["stype.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "duckdb_storage",
    hdrs = ["duckdb_storage.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":storage",
        ":trading_date",
        "@duckdb",
    ],
)

cc_library(
    name = "api_protocol",
    hdrs = ["api_protocol.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:event_loop",
        "//lib/stream:http_client",
        "//lib/stream:http_request_builder",
        "//lib/stream:json_parser",
        "//lib/stream:sink",
        "//lib/stream:tcp_socket",
        "//lib/stream:tls_transport",
    ],
)

cc_library(
    name = "api_client",
    hdrs = ["api_client.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:error",
        "//lib/stream:event_loop",
        "//lib/stream:pipeline",
        ":api_protocol",
        ":dns_resolver",
    ],
)
