load("@rules_cc//cc:defs.bzl", "cc_library")

filegroup(
    name = "public_headers",
    srcs = glob(["*.hpp"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "to_nanos",
    hdrs = ["to_nanos.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "trading_date",
    hdrs = ["trading_date.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "storage",
    hdrs = ["storage.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
    deps = [
        ":trading_date",
    ],
)

cc_library(
    name = "instrument_map",
    hdrs = ["instrument_map.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
    deps = [
        ":storage",
        ":trading_date",
        "@databento_cpp//:databento_headers",
    ],
)

cc_library(
    name = "dbn_parser_component",
    hdrs = ["dbn_parser_component.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        ":record_batch",
        # Full library needed: uses RecordHeader::Size()
        "@databento_cpp//:databento_with_impl",
    ],
)

cc_library(
    name = "cram_auth",
    hdrs = ["cram_auth.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:error",
        "//lib/stream:tls_transport",
        "@fmt",
        "@openssl_sys//:crypto",
    ],
)

cc_library(
    name = "symbol_map",
    hdrs = ["symbol_map.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
    deps = [
        "@databento_cpp//:databento_headers",
    ],
)

cc_library(
    name = "dns_resolver",
    hdrs = ["dns_resolver.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "record_batch",
    hdrs = ["record_batch.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
    deps = [
        "@databento_cpp//:databento_headers",
    ],
)


cc_library(
    name = "live_protocol",
    hdrs = ["live_protocol.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:event_loop",
        "//lib/stream:segment_allocator",
        "//lib/stream:sink",
        "//lib/stream:tcp_socket",
        ":cram_auth",
        ":dbn_parser_component",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "historical_protocol",
    hdrs = ["historical_protocol.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    deps = [
        ":to_nanos",
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:event_loop",
        "//lib/stream:http_client",
        "//lib/stream:http_request_builder",
        "//lib/stream:segment_allocator",
        "//lib/stream:sink",
        "//lib/stream:tcp_socket",
        "//lib/stream:tls_transport",
        "//lib/stream:zstd_decompressor",
        ":dbn_parser_component",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "streaming_client",
    hdrs = ["streaming_client.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    deps = [
        "//lib/stream:error",
        "//lib/stream:event_loop",
        "//lib/stream:pipeline",
        "//lib/stream:protocol",
        "//lib/stream:segment_allocator",
        "//lib/stream:sink",
        "//lib/stream:suspendable",
        ":dns_resolver",
        ":record_batch",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "client",
    hdrs = ["client.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    deps = [
        ":streaming_client",
        ":live_protocol",
        ":historical_protocol",
        ":retry_policy",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "api",
    hdrs = ["api.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    deps = [
        "//src/api:metadata_client",
        "//src/api:symbology_client",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "symbols",
    hdrs = ["symbols.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    deps = [
        ":symbol_map",
        ":schema_utils",
        ":stype",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "tables",
    hdrs = ["tables.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    deps = [
        "//src/table:table",
        "//src/table:trades",
        "//src/table:mbp1",
        "//src/table:ohlcv",
        "//src/table:definitions",
        "//src/table:statistics",
        "//src/table:status",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "retry_policy",
    hdrs = ["retry_policy.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:error",
    ],
)

cc_library(
    name = "schema_utils",
    hdrs = ["schema_utils.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
    deps = [
        "@databento_cpp//:databento_headers",
    ],
)

cc_library(
    name = "stype",
    hdrs = ["stype.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "duckdb_storage",
    hdrs = ["duckdb_storage.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
    deps = [
        ":storage",
        ":trading_date",
        "@duckdb",
        "@fmt",
    ],
)

cc_library(
    name = "api_protocol",
    hdrs = ["api_protocol.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:event_loop",
        "//lib/stream:http_client",
        "//lib/stream:http_request_builder",
        "//lib/stream:json_parser",
        "//lib/stream:segment_allocator",
        "//lib/stream:sink",
        "//lib/stream:tcp_socket",
        "//lib/stream:tls_transport",
        "@fmt",
    ],
)

cc_library(
    name = "api_client",
    hdrs = ["api_client.hpp"],
    strip_include_prefix = "/src",
    include_prefix = "dbn_pipe",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/stream:error",
        "//lib/stream:event_loop",
        "//lib/stream:pipeline",
        ":api_protocol",
        ":dns_resolver",
    ],
)
