load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "url_encode_test",
    srcs = ["url_encode_test.cpp"],
    deps = [
        "//src/api:url_encode",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "trading_date_test",
    srcs = ["trading_date_test.cpp"],
    deps = [
        "//src:trading_date",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "error_test",
    srcs = ["error_test.cpp"],
    deps = [
        "//lib/stream:error",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "api_error_test",
    srcs = ["api_error_test.cpp"],
    deps = [
        "//lib/stream:error",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "reactor_test",
    srcs = ["reactor_test.cpp"],
    deps = [
        "//lib/stream:reactor",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "tcp_socket_test",
    srcs = ["tcp_socket_test.cpp"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:epoll_event_loop",
        "//lib/stream:error",
        "//lib/stream:tcp_socket",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cram_auth_utils_test",
    srcs = ["cram_auth_utils_test.cpp"],
    deps = [
        "//src:cram_auth",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "cram_auth_test",
    srcs = ["cram_auth_test.cpp"],
    deps = [
        "//lib/stream:component",
        "//lib/stream:epoll_event_loop",
        "//src:cram_auth",
        "@googletest//:gtest_main",
    ],
)


cc_test(
    name = "pipeline_component_test",
    srcs = ["pipeline_component_test.cpp"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:epoll_event_loop",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "tls_transport_test",
    srcs = ["tls_transport_test.cpp"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//lib/stream:epoll_event_loop",
        "//src:tls_transport",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "http_client_test",
    srcs = ["http_client_test.cpp"],
    deps = [
        "//lib/stream:component",
        "//lib/stream:epoll_event_loop",
        "//src:http_client",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "zstd_decompressor_test",
    srcs = ["zstd_decompressor_test.cpp"],
    deps = [
        "//lib/stream:component",
        "//lib/stream:epoll_event_loop",
        "//src:zstd_decompressor",
        "@googletest//:gtest_main",
        "@zstd",
    ],
)


cc_test(
    name = "dbn_parser_component_test",
    srcs = ["dbn_parser_component_test.cpp"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:component",
        "//src:dbn_parser_component",
        "//src:record_batch",
        "@databento_cpp//:databento_with_impl",
        "@googletest//:gtest_main",
    ],
)


cc_test(
    name = "symbol_map_test",
    srcs = ["symbol_map_test.cpp"],
    deps = [
        "//src:symbol_map",
        "@databento_cpp//:databento_with_impl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "record_batch_test",
    srcs = ["record_batch_test.cpp"],
    deps = [
        "//src:record_batch",
        "@databento_cpp//:databento_with_impl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "buffer_chain_test",
    srcs = ["buffer_chain_test.cpp"],
    deps = [
        "//lib/stream:buffer_chain",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "pipeline_sink_test",
    srcs = ["pipeline_sink_test.cpp"],
    deps = [
        "//lib/stream:epoll_event_loop",
        "//lib/stream:error",
        "//src:pipeline_sink",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "protocol_driver_test",
    srcs = ["protocol_driver_test.cpp"],
    deps = [
        "//lib/stream:event_loop",
        "//src:pipeline_sink",
        "//src:protocol_driver",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "live_protocol_test",
    srcs = ["live_protocol_test.cpp"],
    deps = [
        "//lib/stream:buffer_chain",
        "//src:live_protocol",
        "//src:pipeline_sink",
        "//src:protocol_driver",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "historical_protocol_test",
    srcs = ["historical_protocol_test.cpp"],
    deps = [
        "//src/api:url_encode",
        "//src:historical_protocol",
        "//src:pipeline_sink",
        "//src:protocol_driver",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "pipeline_test",
    srcs = ["pipeline_test.cpp"],
    deps = [
        "//lib/stream:epoll_event_loop",
        "//src:live_protocol",
        "//src:pipeline",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "client_test",
    srcs = ["client_test.cpp"],
    deps = [
        "//lib/stream:epoll_event_loop",
        "//src:client",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "pipeline_integration_test",
    srcs = ["pipeline_integration_test.cpp"],
    deps = [
        "//lib/stream:epoll_event_loop",
        "//lib/stream:reactor",
        "//src:client",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "epoll_event_loop_test",
    srcs = ["epoll_event_loop_test.cpp"],
    deps = [
        "//lib/stream:epoll_event_loop",
        "//lib/stream:event_loop",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "storage_test",
    srcs = ["storage_test.cpp"],
    deps = [
        "//src:storage",
        "//src:trading_date",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "instrument_map_test",
    srcs = ["instrument_map_test.cpp"],
    deps = [
        "//src:instrument_map",
        "//src:trading_date",
        "@databento_cpp//:databento_with_impl",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "retry_policy_test",
    srcs = ["retry_policy_test.cpp"],
    deps = [
        "//lib/stream:error",
        "//src:retry_policy",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "schema_utils_test",
    srcs = ["schema_utils_test.cpp"],
    deps = [
        "//src:schema_utils",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "stype_test",
    srcs = ["stype_test.cpp"],
    deps = [
        "//src:stype",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "duckdb_storage_test",
    srcs = ["duckdb_storage_test.cpp"],
    deps = [
        "//src:duckdb_storage",
        "//src:trading_date",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "duckdb_storage_factory_test",
    srcs = ["duckdb_storage_factory_test.cpp"],
    deps = [
        "//src:duckdb_storage",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "json_parser_test",
    srcs = ["json_parser_test.cpp"],
    deps = [
        "//lib/stream:buffer_chain",
        "//lib/stream:error",
        "//src/api:json_parser",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "api_pipeline_test",
    srcs = ["api_pipeline_test.cpp"],
    deps = [
        "//src/api:api_pipeline",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "metadata_client_test",
    srcs = ["metadata_client_test.cpp"],
    deps = [
        "//src/api:metadata_client",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "symbology_client_test",
    srcs = ["symbology_client_test.cpp"],
    deps = [
        "//src/api:symbology_client",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "sink_test",
    srcs = ["sink_test.cpp"],
    deps = [
        "//lib/stream:sink",
        "@googletest//:gtest_main",
    ],
)
